[tool.poetry]
name = "tpkutils"
version = "0.8.2"
description = "ArcGIS Tile Package Utilities"
authors = ["Brendan Ward <bcward@astutespruce.com>"]
license = "ISC"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3"
]
packages = [
    { include = "tpkutils" }
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
pymbtiles = "^0.5.0"
six = "^1.16.0"
mercantile = "^1.2.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
tpk = "tpkutils.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
